feat: Update code demo backend files
